# fortran-rust-compiler

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
examples/: if.f90  if.rs  main.f90  output.rs
scripts/: create-branch.py
src/: error.rs  if_comp.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/pest/: fortran.pest
tests/: should_parse.rs
