[package]
name = "fortran-rust-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
colored = "2.0.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
pretty_assertions = { version = "1.2.1" }
